8303937: Corrupted heap dumps due to missing retries for os::write()

Reviewed-by: clanger
Backport-of: bf16b5b9880eb89b283006db090dce4346aa877b